# aws_app_rust

./: .gitignore  Cargo.toml  Dockerfile.build.ubuntu18.04  Makefile  README.md
.github/workflows/: rust.yml
aws_app_http/: Cargo.toml
aws_app_http/src/: app.rs  datetime_wrapper.rs  elements.rs  errors.rs  ipv4addr_wrapper.rs  lib.rs  logged_user.rs  requests.rs  routes.rs
aws_app_lib/: Cargo.toml
aws_app_lib/src/: aws_app_interface.rs  aws_app_opts.rs  config.rs  date_time_wrapper.rs  ec2_instance.rs  ecr_instance.rs  errors.rs  iam_instance.rs  inbound_email.rs  instance_family.rs  instance_opt.rs  iso_8601_datetime.rs  lib.rs  models.rs  novnc_instance.rs  pgpool.rs  pricing_instance.rs  rate_limiter.rs  resource_type.rs  route53_instance.rs  s3_instance.rs  schema.rs  scrape_instance_info.rs  scrape_pricing_info.rs  ses_client.rs  spot_request_opt.rs  ssh_instance.rs  stack_string.rs  stdout_channel.rs  sysinfo_instance.rs  systemd_instance.rs
migrations/: V01__instance_family.sql  V02__instance_list.sql  V03__instance_pricing.sql  V04__authorized_users.sql  V05__instance_pricing_id_uuid.sql  V06__instance_pricing_type_unique.sql  V07__add_indexes.sql  V08__instance_family_use_for_spot.sql  V09__inbound_email.sql  V10__dmarc_records.sql
migrations/2019-12-02-112904_instance_family/: down.sql  up.sql
migrations/2019-12-02-113628_instance_list/: down.sql  up.sql
migrations/2019-12-02-114421_instance_pricing/: down.sql
migrations/2020-12-31-235138_instance_family_data_url/: down.sql  up.sql
scripts/: Dockerfile  backup_db.sh  bootstrap_db.sh  bootstrap_docker.sh  bootstrap_github.sh  build_deb_docker.sh  clear_db.sh  openapi.yaml  restore_db.sh
src/: aws_app_http.rs  aws_app_interface.rs  aws_app_opts.rs  config.rs  ec2_instance.rs  ecr_instance.rs  lib.rs  main.rs  models.rs  resource_type.rs  schema.rs  scrape_instance_info.rs  scrape_pricing_info.rs  sts_instance.rs  system_stats.rs
templates/: index.html  scripts.js  setup_aws.sh  style.css
tests/data/: AMAZON_SES_SETUP_NOTIFICATION  ec2_instances.json  example_html_email  instance_types_hvm.html  instance_types_pv.html  on_demand.html  reserved_pricing.html
