[package]
name = "aws_app_rust"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8"
r2d2_postgres = "0.14"
diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
failure = "0.1"
chrono = "0.4"
reqwest = "0.9"
select = "0.4"
dotenv = "0.15"
json = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rusoto_core = {version = "0.42", default_features = false, features=["rustls"]}
rusoto_ec2 = {version = "0.42", default_features = false, features=["rustls"]}
rusoto_ecr = {version = "0.42", default_features = false, features=["rustls"]}
structopt = "0.3"
rayon = "1.2"
base64 = "0.11"
lazy_static = "1.4"
parking_lot = "0.10"

[[bin]]
name = "aws-app-rust"
path = "src/main.rs"
doc = false
