[package]
name = "aws_app_rust"
version = "0.6.26"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ddboline/aws_app_rust"
description = "CLI and Web app frontend for aws, something simpler than aws-cli and the web console."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_app_lib = {path="aws_app_lib"}
aws_app_http = {path="aws_app_http"}
actix-rt = "1.1"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
tokio = {version="0.2", features=["full"]}

[workspace]
members = [
    "aws_app_http",
    "aws_app_lib",
]

[[bin]]
name = "aws-app-rust"
path = "src/main.rs"
doc = false

[[bin]]
name = "aws-app-http"
path = "src/aws_app_http.rs"
doc = false
