[package]
name = "aws_app_http"
version = "0.11.7"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_app_lib = {path = "../aws_app_lib"}
aws-config = {version="1.5", features=["behavior-version-latest"]}
anyhow = "1.0"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.2"}
cached = {version="0.54", features=["async", "async_tokio_rt_multi_thread"]}
derive_more = {version="1.0", features=["full"]}
dirs = "5.0"
dioxus = "0.6"
dioxus-core = "0.6"
dioxus-ssr = "0.6"
futures = "0.3"
itertools = "0.13"
log = "0.4"
maplit = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.2"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
smallvec = "1.6"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="1.0.2" }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = "1.42"
uuid = "1.8"

[dev-dependencies]
auth_server_http = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.2"}
auth_server_lib = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.2"}
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
reqwest = {version = "0.12", features=["cookies", "rustls-tls", "gzip", "json"], default-features=false}
