[package]
name = "aws_app_http"
version = "0.12.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_app_lib = {path = "../aws_app_lib"}
aws-config = {version="1.5", features=["behavior-version-latest"]}
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.1"}
axum = { version = "0.8", features = ["multipart"] }
axum-extra = {version="0.10", features=["cookie"]}
cached = {version="0.55", features=["async", "async_tokio_rt_multi_thread"]}
derive_more = {version="2.0", features=["full"]}
dirs = "6.0"
dioxus = "0.6"
dioxus-core = "0.6"
dioxus-ssr = "0.6"
futures = "0.3"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
mime = "0.3"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"
smallvec = "1.14"
stack-string = { version="1.1", features=["postgres_types", "utoipa_types", "axum_types"] }
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.44", features=["rt", "macros", "rt-multi-thread"]}
tower-http = {version="0.6", features=["cors"]}
utoipa = { version = "5.3", features = ["axum_extras", "yaml", "time", "uuid", "smallvec", "url", "openapi_extensions", "decimal"] }
utoipa-helper = "0.1"
utoipa-axum = { version = "0.2" }
uuid = "1.13"

[dev-dependencies]
auth_server_http = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.1"}
auth_server_lib = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.13.1"}
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
reqwest = {version = "0.12", features=["cookies", "rustls-tls", "gzip", "json"], default-features=false}
