[package]
name = "aws_app_lib"
version = "0.11.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version="1.0", features=["behavior-version-latest"]}
aws-types = "1.0"
aws-sdk-ec2 = "1.1"
aws-sdk-ecr = "1.1"
aws-sdk-iam = "1.1"
aws-sdk-pricing = "1.1"
aws-sdk-route53 = "1.1"
aws-sdk-s3 = "1.1"
aws-sdk-ses = "1.1"
aws-sdk-sts = "1.1"
base64 = "0.22"
bytes = "1.1"
clap = {version="4.0", features=["derive"]}
deadpool-postgres = { version = "0.14", features=["serde"] }
derive_more = {version="1.0", features = ["full"]}
dirs = "5.0"
dotenvy = "0.15"
envy = "0.4"
flate2 = "1.0"
futures = "0.3"
infer = "0.16"
itertools = "0.13"
log = "0.4"
maplit = "1.0"
once_cell = "1.0"
parking_lot = "0.12"
postgres-types = "0.2"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
rand = "0.8"
refinery = {version="0.8", features=["tokio-postgres"]}
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls"], default-features=false}
roxmltree = "0.20"
select = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="1.0.2" }
stdout-channel = "0.6"
sysinfo = "0.32"
tempfile = "3.10"
tempdir = "0.3"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = { version="1.41", features=["rt", "macros", "rt-multi-thread"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
walkdir = "2.3"
url = "2.3"
uuid = { version = "1.8", features = ["serde", "v4"] }
mail-parser = "0.9"
zip = {version = "2.1", default-features = false, features=["aes-crypto", "bzip2", "deflate", "deflate64", "lzma", "time", "zstd"]}

[dev-dependencies]
flate2 = "1.0"
